[package]
name = "coding_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
csv = "1.1.6"
log = "0.4.17"
env_logger = "0.9.0"
rust_decimal = "1.25.0"

[profile.release]
overflow-checks = true
